Fix CSS for full on mobile

--- a/stylesheets/sass/core.scss
+++ b/stylesheets/sass/core.scss
@@ -295,6 +295,9 @@ $offset: 50px; // offset from elements above for copy
       display: block;
       @include position(absolute, 0px 0px 0px 0px);
     }
+    @include media($mobile) {
+      max-height: 100vh;
+    }
   }
 }
 
